<resources>
    <string name="app_name">PhotoAssassin</string>
    <string name="photo">Photo</string>
    <string name="assassin">Assassin</string>
    <string name="registration">Registration</string>
    <string name="reset">Reset</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account"><u>Have an account? Log in</u></string>
    <string name="register_with_google">register with google</string>
    <string name="register_with_facebook">register with facebook</string>
    <string name="password_too_short_message">password must be at least 8 characters</string>
    <string name="invalid_email_message">invalid email</string>
    <string name="auth_failed_registration">Registration failed</string>
    <string name="auth_failed_login">Login failed</string>
    <string name="web_client_id">924416786960-2fs9idqglcoqdvj69jjj25b8golsdukr.apps.googleusercontent.com</string>
    <string name="facebook_app_id">306114270313529</string>
    <string name="fb_login_protocol_scheme">fb306114270313529</string>
    <string name="log_in">Log In</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="register"><u>Register</u></string>
    <string name="continue_with">continue with</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="reset_password">Reset password</string>
    <string name="no_account_register"><u>No account? Register</u></string>
    <string name="pwd_reset_confirmation">We have sent you instructions to reset your password!</string>
    <string name="games_won">Games Won:</string>
    <string name="win_percent">Win %:</string>
    <string name="percentile">Percentile:</string>
    <string name="kill_death_ratio">Kill/Death Ratio:</string>
    <string name="profile_picture">profile picture</string>
    <string name="game_history">Game History</string>
    <string name="full_name">Full Name</string>
    <string name="registration_continue">Continue</string>
    <string name="select_profile_picture">select profile picture</string>
    <string name="take_new_photo">Take new photo</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="no_photo_app_found">No photo-taking app found</string>
    <string name="no_gallery_app_found">No gallery app found</string>
    <string name="invalid_characters_in_display_name_msg">display name can contain only alphanumeric characters, hyphens, apostrophes, and spaces</string>
    <string name="display_name_too_short_msg">display name must be at least 5 characters</string>
    <string name="display_name_too_long_msg">display name must be at most 20 characters</string>
    <string name="profile_pic_required">profile picture is required</string>
    <string name="failed_send_pwd_reset_email">Failed to send password reset email!</string>
    <string name="login_failed">login failed</string>
    <string name="acct_not_yet_registered_msg">Please complete account registration</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="back_button">back button</string>
    <string name="edit_display_name">Edit display name</string>
    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="search_user">Search User</string>
    <string name="magnifying_glass">magnifying glass</string>
    <string name="display_name_doesnt_exist">display name doesn\'t exist</string>
    <string name="already_viewing_this_profile">you\'re already viewing this profile</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="new_email">New Email</string>
    <string name="confirm_new_email">Confirm New Email</string>
    <string name="submit">Submit</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="turn_all_notifications">Turn all notifications on/off</string>
    <string name="receive_notifications_when">Receive notifications when:</string>
    <string name="pending_vote">You have a pending vote</string>
    <string name="someone_eliminated">Someone is eliminated</string>
    <string name="you_are_eliminated">You are eliminated</string>
    <string name="voting_results">Voting results are in</string>
    <string name="when_invited">When you are invited</string>
</resources>
