<?xml version="1.0" encoding="utf-8"?>



<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="change_email_pref"
        android:title="@string/change_email" >
    <intent
        android:action="org.michiganhackers.photoassassin.Settings.ChangeEmailActivity"/>
    </Preference>

    <Preference
        android:key="change_password_pref"
        android:title="@string/change_password" >
    <intent
       android:action="org.michiganhackers.photoassassin.Settings.ChangePasswordActivity" />
    </Preference>

    <Preference
        android:key="notifications_pref"
        android:title="@string/notifications">
    <intent
        android:action="org.michiganhackers.photoassassin.Settings.NotificationsActivity" />
    </Preference>

    <Preference
        android:key="logout_pref"
        android:title="@string/logout"/>
</PreferenceScreen>