<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPages.ResetPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout style="@style/LinearLayoutLoginPages">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />

            <TextView
                style="@style/TitleLoginPages"
                android:text="@string/reset"
                android:textSize="96sp"/>

            <TextView
                style="@style/TitleLoginPages"
                android:layout_marginTop="-20dp"
                android:layout_marginBottom="70dp"
                android:text="@string/password"
                android:textSize="96sp"
                />

            <include layout="@layout/edit_text_email" />

            <Button
                style="@style/ButtonLoginPages"
                android:layout_marginTop="30dp"
                android:onClick="onResetPasswordButtonClick"
                android:text="@string/reset_password"/>

            <Button
                style="@style/ButtonNoBackgroundLoginPages"
                android:onClick="onLoginButtonClick"
                android:layout_marginTop="30dp"
                android:text="@string/already_have_account"
                android:textSize="24sp" />

            <Button
                style="@style/ButtonNoBackgroundLoginPages"
                android:onClick="onRegisterButtonClick"
                android:text="@string/no_account_register"
                android:textSize="24sp" />

        </LinearLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
