<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPages.SetupProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout style="@style/LinearLayoutLoginPages">

            <TextView
                style="@style/TitleLoginPages"
                android:layout_marginBottom="40dp"
                android:text="@string/registration"
                android:textSize="64sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_profile_pic"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/profile_picture"
                    app:srcCompat="@drawable/ic_profile" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/image_profile_pic"
                    android:layout_alignEnd="@+id/image_profile_pic"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:tint="@color/colorPrimary"
                    android:onClick="onAddProfilePicButtonClick"
                    app:srcCompat="@drawable/ic_add_photo" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/whiteSixtyPercentOpacity"
                app:errorTextAppearance="@style/ErrorTextAppearanceLoginPages"
                app:hintTextAppearance="@style/HintTextAppearanceLoginPages"
                app:hintTextColor="@color/whiteSixtyPercentOpacity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_display_name"
                    style="@style/EditTextLoginPages"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/ButtonLoginPages"
                android:onClick="onContinueButtonClick"
                android:text="@string/registration_continue" />

            <Button
                style="@style/ButtonNoBackgroundLoginPages"
                android:layout_marginTop="0dp"
                android:onClick="onLoginButtonClick"
                android:text="@string/already_have_account"
                android:textSize="24sp" />


        </LinearLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
