<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.michiganhackers.photoassassin.Settings.NotificationsActivity"
    android:id="@+id/coordinator_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <Button
                style="@style/BackButton"
                android:layout_alignParentStart="true"
                android:layout_marginStart="-15dp"
                android:onClick="onBackButtonClick" />

            <TextView
                style="@style/PageTitle"
                android:layout_centerHorizontal="true"
                android:text="@string/notifications"
                android:textSize="64sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn_all_notifications"
                android:textSize="32sp"
                android:fontFamily="@font/economica_bold"
                android:textColor="@android:color/white"
                android:layout_marginStart="20dp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive_notifications_when"
                android:textSize="32sp"
                android:fontFamily="@font/economica_bold"
                android:textColor="@android:color/white"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pending_vote"
                    android:textSize="32sp"
                    android:fontFamily="@font/economica_bold"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="20dp"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/someone_eliminated"
                    android:textSize="32sp"
                    android:fontFamily="@font/economica_bold"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="20dp"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="66dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_are_eliminated"
                    android:textSize="32sp"
                    android:fontFamily="@font/economica_bold"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="20dp"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="109dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voting_results"
                    android:textSize="32sp"
                    android:fontFamily="@font/economica_bold"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="20dp"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="91dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/when_invited"
                    android:textSize="32sp"
                    android:fontFamily="@font/economica_bold"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="20dp"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="83dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>