<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_profile_pic"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/profile_picture"
                    app:srcCompat="@drawable/ic_profile" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/image_profile_pic"
                    android:layout_alignEnd="@+id/image_profile_pic"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_add_photo" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="188dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_marginStart="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_text_display_name"
                        android:layout_width="wrap_content"
                        android:ems="8"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:inputType="textPersonName" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onEditDisplayNameClick"
                        app:srcCompat="@drawable/ic_pencil"/>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/games_won" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/text_view_num_games_won"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/win_percent" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/text_view_percent_games_won"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/percentile" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/text_view_percentile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kill_death_ratio" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/text_view_kd_ratio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_game_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_history" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>